# dynamic-pricing

./: .gitignore  pyproject.toml
dev/: demand_based_pricing_optimisation.ipynb  hotel_revenue_optimizer.ipynb
